# py-template

./: .cookiecutterignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml  test-template.yml
examples/: quickstart.py
src/pytemplate/: __init__.py
{{cookiecutter.project_name}}/: .releaserc.json  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/examples/: quickstart.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: test_import.py
